# ar_1

./: .gitignore  README.md
src/ar1_description/config/: nav.rviz
src/ar1_description/config/dwa_planner/: costmap_common_params.yaml  costmap_global_params.yaml  costmap_local_params.yaml
src/ar1_description/launch/: amcl_localization.launch  main.launch  mobile_manipulator_move_base.launch  navigation.launch
src/ar1_description/launch/include/: amcl.launch  ar1_bot.launch  map_server.launch  rviz.launch
src/ar1_description/launch/move_base/: localplanner_DWAPlannerROS.launch
src/ar1_description/params/: costmap_common_params.yaml  nav.rviz
src/ar1_description/urdf/: ar1.gazebo  ar1.xacro
src/navigation_goals/: CMakeLists.txt  package.xml
src/navigation_goals/include/: navigation_goals.hpp  rviz_marker.hpp
src/navigation_goals/src/: navigation_goals.cpp  rviz_marker.cpp
